<?xml version="1.0"?>
<package format="2">
    <name>atf_test_app_path_length</name>
    <version>1.0.0</version>
    <description>The atf_test_app_path_length package</description>

    <license>LGPL</license>

    <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>
    <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>atf_core</depend>
    <depend>atf_test_tools</depend>
    <depend>roslaunch</depend>
    <depend>rospy</depend>

    <test_depend>rostest</test_depend>

</package>
