<?xml version="1.0"?>
<package format="2">
    <name>atf_test_app_tf</name>
    <version>0.1.0</version>
    <description>Test app that uses the ATF tf metrics.</description>

    <maintainer email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</maintainer>
    <maintainer email="bjoern.eistel@mojin-robotics.de">Björn Eistel</maintainer>

    <author email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</author>
    <author email="bjoern.eistel@mojin-robotics.de">Björn Eistel</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>atf_test_tools</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

    <test_depend>atf_core</test_depend>

</package>
