<?xml version="1.0"?>
<package format="2">
    <name>atf_test_app_user_result</name>
    <version>0.1.0</version>
    <description>Test app that uses the ATF user result metric.</description>

    <maintainer email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>rospy</exec_depend>

    <test_depend>atf_core</test_depend>

</package>
